# voca-agent

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  voca-agent.db
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
Formula/: spread.rb  voca-agent.rb
app/: Cargo.toml
app/src/: main.rs  workflow.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs  port.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: lib.rs
crates/integration/: Cargo.toml
crates/integration/src/: error.rs  lib.rs
crates/integration/src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs
crates/integration/src/obsidian/: exporter.rs  mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/llm/tests/: integration.rs
crates/notify/: Cargo.toml
crates/notify/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: homebrew-setup.md  master-prd.md
docs/adrs/: ADR-001-rust-language.md  ADR-001.md  ADR-002.md  ADR-003.md  ADR-004-tokio-reqwest-stack.md  ADR-005-gemini-flash-llm.md  ADR-006-github-actions-cicd.md  ADR-007-homebrew-distribution.md  ADR-008-telegram-notification.md  ADR-009-mcp-server-integration.md  ADR-010-feed-rs-rss-parsing.md
docs/plans/: 006-integration-plan.md
docs/specs/: 001-core.md  002-fetcher.md  003-storage.md  004-llm.md  005-pipeline.md  006-integration.md  007-cicd.md  008-homebrew_dist.md  009-telegram_notify.md
docs/test-results/: 006-integration-test.md
docs/troubleshooting/: 007-cicd-setup.md
