[workspace]
resolver = "2"
members = ["crates/*", "app"]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP & Parsing
reqwest = { version = "0.12", features = ["json"] }
rss = "2"
scraper = "0.20"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
voca-core = { path = "crates/core" }
voca-fetcher = { path = "crates/fetcher" }
voca-integration = { path = "crates/integration" }
voca-llm = { path = "crates/llm" }
voca-storage = { path = "crates/storage" }
