[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
voca-core = { workspace = true }
voca-fetcher = { workspace = true }
voca-integration = { workspace = true }
voca-storage = { workspace = true }
voca-llm = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
