[package]
name = "spread"
version = "0.1.0"
edition = "2021"

[dependencies]
spread-core = { workspace = true }
spread-fetcher = { workspace = true }
spread-integration = { workspace = true }
spread-notify = { workspace = true }
spread-storage = { workspace = true }
spread-llm = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
