[package]
name = "voca-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
voca-core = { path = "../core" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rss = "2.0"
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
