[package]
name = "spread-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
spread-core = { path = "../core" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
feed-rs = "2"
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.20"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
