[package]
name = "voca-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
voca-core = { path = "../core" }
voca-storage = { path = "../storage" }
tera = "1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
