[package]
name = "spread-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
spread-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
dotenvy = "0.15"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
