[package]
name = "voca-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
voca-core = { workspace = true }
voca-storage = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

rand = "0.8"
