[package]
name = "voca-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
voca-core = { path = "../core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
